--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 tensorboard
-numpy
+# numpy
 transformers # huggingface transformers
 h5py # .h5 files
 tqdm # progressbar
@@ -13,5 +13,5 @@ pytest-cov # code coverage
 mypy # typing
 # pycodestyle # code style check. pycodestyle --max-line-length 120 .
 # pylint # linter
-# pycocoevalcap # text evaluation # alternative: # pip install git+https://github.com/salaniz/pycocoevalcap
+pycocoevalcap # text evaluation # alternative: # pip install git+https://github.com/salaniz/pycocoevalcap
 nltk
